# pvr.njoy

./: CMakeLists.txt
debian/: changelog.in  control  copyright  rules
pvr.njoy/: addon.xml
src/: N7Xml.cpp  client.cpp  client.h
